# Vinctus-Arce

./: CMakeLists.txt  Makefile  README.md
cmake/: ExternalAllegro.cmake
src/: Button.cpp  Button.h  CMakeLists.txt  Common.h  GameEngine.cpp  GameEngine.h  GameObject.cpp  GameObject.h  Globals.cpp  Globals.h  GraphicEngine.cpp  GraphicEngine.h  Input.cpp  Input.h  InputMap.h  Main.cpp  Menu.cpp  Menu.h  MenuActions.cpp  MobileObject.h  MobileObject_MovementState.cpp  MobileObject_MovementState.h  MobileObject_State.cpp  MobileObject_State.h  Singleton.h  Sprite.cpp  Sprite.h  State.cpp  State.h  State_Game.cpp  State_Game.h  State_Menu.cpp  State_Menu.h  UI_GraphicalElement.h
src/Game/: CMakeLists.txt  Character.cpp  Character.h  Charecter.cpp  CollisionDetector.cpp  CollisionDetector.h  GameObject.cpp  GameObject.h  GameUI.cpp  GameUI.h  GameUI_bar.cpp  GameUI_bar.h  MobileObject.cpp  MobileObject.h  MobileObject_MovementState.cpp  MobileObject_MovementState.h  NPC.cpp  NPC.h  NPCSheet.h  ObjectHandler.cpp  ObjectHandler.h  Player.cpp  Player.h  State_Game.cpp  State_Game.h  StaticObject.cpp  StaticObject.h  Yeti.cpp  Yeti.h
src/Game/Map/: CMakeLists.txt  Map.cpp  Map.h  Tile.cpp  Tile.h
src/Game/Scene/: CMakeLists.txt  Camera.cpp  Camera.h  Layer.h
src/Game/Scene/Layers/: CMakeLists.txt  MapLayer.cpp  MapLayer.h  MobileObjectLayer.cpp  MobileObjectLayer.h  StaticObjectLayer.cpp  StaticObjectLayer.h
src/Graphics/: AnimatedGraphic.cpp  AnimatedGraphic.h  CMakeLists.txt  Graphic.h  GraphicEngine.cpp  GraphicEngine.h  Sprite.cpp  Sprite.h  StaticGraphic.h
src/Graphics/UI/: CMakeLists.txt  Font.cpp  Font.h  Image.cpp  Image.h  Text.cpp  Text.h  TextManager.cpp  TextManager.h  UIElement.h  UI_GraphicalElement.h  UI_element.h
src/Menu/: Button.cpp  Button.h  CMakeLists.txt  ClassSelectionIcon.cpp  ClassSelectionIcon.h  Menu.cpp  Menu.h  MenuActions.cpp  MenuActions.h  MenuButton.cpp  MenuButton.h  Slider.cpp  Slider.h  State_Menu.cpp  State_Menu.h
