add_subdirectory(Map)
add_subdirectory(Scene)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Character.cpp)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Character.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CollisionDetector.cpp)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CollisionDetector.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/GameObject.cpp)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/GameObject.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/GameUI.cpp)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/GameUI.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/GameUI_bar.cpp)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/GameUI_bar.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/MobileObject.cpp)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/MobileObject.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/MobileObject_MovementState.cpp)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/MobileObject_MovementState.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/NPC.cpp)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/NPC.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/NPCSheet.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/ObjectHandler.cpp)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/ObjectHandler.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Player.cpp)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Player.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/State_Game.cpp)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/State_Game.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/StaticObject.cpp)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/StaticObject.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Yeti.cpp)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Yeti.h)

set(GAME_SOURCES ${GAME_SOURCES} PARENT_SCOPE)
