add_subdirectory(UI)

list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/AnimatedGraphic.cpp)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/AnimatedGraphic.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Graphic.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/GraphicEngine.cpp)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/GraphicEngine.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Sprite.cpp)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Sprite.h)
list(APPEND GAME_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/StaticGraphic.h)

set(GAME_SOURCES ${GAME_SOURCES} PARENT_SCOPE)